<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_add_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.ApplicationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.AddGameActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_game"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <TextView
                android:id="@+id/addGameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_game"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_add_game" />

            <TextView
                android:id="@+id/gameNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/type_game_name"
                app:layout_constraintEnd_toEndOf="@+id/gameNameEditText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameNameEditText"
                app:layout_constraintTop_toBottomOf="@+id/addGameText" />

            <EditText
                android:id="@+id/gameNameEditText"
                tools:ignore="Autofill,LabelFor"
                style="@style/EditTextAddGame"
                android:layout_width="290dp"
                android:layout_height="36dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameNameTextView" />

            <TextView
                android:id="@+id/localizationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="16dp"
                android:text="@string/type_game_name"
                app:layout_constraintEnd_toEndOf="@+id/gameNameEditText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameNameEditText"
                app:layout_constraintTop_toBottomOf="@+id/gameNameEditText" />


            <RadioGroup
                android:id="@+id/localizationRadioGroup"
                android:layout_width="270dp"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/gameNameEditText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameNameEditText"
                app:layout_constraintTop_toBottomOf="@+id/localizationLabel">

                <RadioButton
                    android:id="@+id/chooseCurrentLocalizationRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/accent"
                    android:text="@string/user_current_localization" />

                <RadioButton
                    android:id="@+id/chooseLocalizationRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/accent"
                    android:text="@string/choose_localization" />
            </RadioGroup>


            <RadioGroup
                android:id="@+id/gameTypeRadioGroup"
                android:layout_width="270dp"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/localizationRadioGroup"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/localizationRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/gamePubLabel">

                <RadioButton
                    android:id="@+id/gameOwnerRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/accent"
                    android:text="@string/game_owner" />

                <RadioButton
                    android:id="@+id/gamePubRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/accent"
                    android:text="@string/gather_team" />
            </RadioGroup>

            <TextView
                android:id="@+id/gamePubLabel"
                style="@style/ButtonLabelStyle"
                android:text="@string/game_pub"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/gameTypeRadioGroup"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameTypeRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/localizationRadioGroup" />

            <EditText
                tools:ignore="Autofill,LabelFor"
                android:id="@+id/gamePubEditText"
                style="@style/EditTextAddGame"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameTypeRadioGroup" />

            <TextView
                android:id="@+id/textView"
                style="@style/ButtonLabelStyle"
                android:layout_marginTop="16dp"
                android:text="@string/game_type"
                app:layout_constraintStart_toStartOf="@+id/gamePubEditText"
                app:layout_constraintTop_toBottomOf="@+id/gamePubEditText" />

            <LinearLayout
                android:id="@+id/gameKindCheckBoxes"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView">

            </LinearLayout>

            <TextView
                android:id="@+id/numberOfPlayersLabel"
                style="@style/ButtonLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/number_of_players"
                app:layout_constraintEnd_toEndOf="@+id/gameKindCheckBoxes"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameKindCheckBoxes"
                app:layout_constraintTop_toBottomOf="@+id/gameKindCheckBoxes" />

            <EditText
                android:id="@+id/numberOfPlayersEditText"
                style="@style/EditTextAddGame"
                tools:ignore="Autofill,LabelFor"
                android:layout_width="80dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/numberOfPlayersLabel"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="@+id/numberOfPlayersLabel"
                app:layout_constraintTop_toBottomOf="@+id/numberOfPlayersLabel" />

            <TextView
                android:id="@+id/gameDateLabel"
                style="@style/ButtonLabelStyle"
                android:layout_marginTop="16dp"
                android:text="@string/game_date"
                app:layout_constraintStart_toStartOf="@+id/numberOfPlayersEditText"
                app:layout_constraintTop_toBottomOf="@+id/numberOfPlayersEditText" />

            <TextView
                android:id="@+id/gameDatePicker"
                style="@style/ButtonLabelStyle"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center_horizontal|center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameDateLabel" />


            <TextView
                android:id="@+id/predictedGameTimeLabel"
                style="@style/ButtonLabelStyle"
                android:layout_marginTop="16dp"
                android:text="@string/estimated_game_time"
                app:layout_constraintStart_toStartOf="@+id/gameTimeEditText"
                app:layout_constraintTop_toBottomOf="@+id/gameDatePicker" />

            <EditText
                android:id="@+id/gameTimeEditText"
                style="@style/EditTextAddGame"
                android:ems="10"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/predictedGameTimeLabel"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/GameDescription"
                android:layout_marginTop="16dp"
                style="@style/ButtonLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_description"
                app:layout_constraintStart_toStartOf="@+id/gameTimeEditText2"
                app:layout_constraintTop_toBottomOf="@+id/gameTimeEditText" />

            <EditText
                android:id="@+id/gameTimeEditText2"
                style="@style/EditTextAddGame"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GameDescription"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/addGameButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/add_game"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameTimeEditText2" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>